@@ -280,11 +280,9 @@ This is a template stylesheet which doesn't support description below the thumbn
 /* ----------- Single picture -------------*/
 .ngg-singlepic {
 	background-color:#FFFFFF;
-	border:1px solid #A9A9A9;
 	display:block;  
 	margin:4px 0px 4px 5px;
 	padding:4px;
-	position:relative;
 }
 
 .ngg-left {
@@ -297,7 +295,7 @@ This is a template stylesheet which doesn't support description below the thumbn
 	padding-left:10px;
 }
 
-.ngg-center img {
+.ngg-center {
   	margin-left: auto !important;
     margin-right: auto !important;
 }
